added the policy guide page in basically comlete

--- a/myAccount.html
+++ b/myAccount.html
@@ -159,7 +159,7 @@
                         
                     </div>
                     <div style="text-align: center;">
-                        <label for="fullName" style="text-align: center; font-size:x-large;padding-bottom: 30px;">Vanessa Viayra</label>
+                        <label for="fullName" style="text-align: center; font-size:x-large;padding-bottom: 30px;">Vanessa Martinez</label>
 
 
                     </div>
@@ -181,13 +181,13 @@
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
                     <div class="form-group">
                         <label for="fullName">Full Name</label>
-                        <input type="text" class="form-control" id="fullName" placeholder="Vanessa Viayra">
+                        <input type="text" class="form-control" id="fullName" placeholder="Vanessa Martinez">
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
                     <div class="form-group">
                         <label for="eMail">Email</label>
-                        <input type="email" class="form-control" id="eMail" placeholder="Vanessa_Viayra@Outlook.com">
+                        <input type="email" class="form-control" id="eMail" placeholder="Vanessa_Martinez@Outlook.com">
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
