--- a/policyGuide.html
+++ b/policyGuide.html
@@ -1,3 +1,361 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Latham Bakery</title>
+
+    <script>
+
+    </script>
+
+    <!-- FONT IMPORTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+MX:wght@100..400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
 
 
-<a href="javascript:window.history.back();">Back</a>
+
+    <!-- BOOTSTRAP INPORT -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <!-- IMPORT LOCAL CSS FILE -->
+    <link rel="stylesheet" href="css/main.css">
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+    <style>
+        /* do not edit below */
+        a {
+            color: inherit;
+            text-decoration: inherit;
+        }
+
+        a:hover {
+            color: initial;
+            text-decoration: inherit;
+        }
+
+        .row {
+            margin: auto
+        }
+
+        /* .mainLogo{
+            max-width: 50%; height: auto;
+            margin: auto;
+            display: block;
+        } */
+        /* do not edit above */
+
+
+
+        .policy-section {
+            max-width: 95%;
+            margin: auto;
+            padding: 20px;
+            background-color: #f9f9f9;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            font-family: 'Arial', sans-serif;
+        }
+
+        .policy-section h1 {
+            font-size: 28px;
+            color: #333;
+            margin-bottom: 16px;
+            text-align: center;
+        }
+
+        .policy-section h2 {
+            font-size: 22px;
+            color: #444;
+            font-weight: bold;
+            margin-top: 20px;
+            margin-bottom: 10px;
+            padding-bottom: 5px;
+            border-bottom: 2px solid #ddd;
+        }
+
+        .policy-section p {
+            font-size: 16px;
+            color: #666;
+            line-height: 1.6;
+            text-align: justify;
+            margin-bottom: 15px;
+            font-style: italic;
+            /* Adds italic styling to the paragraph text */
+        }
+
+        .policy-section ul {
+            margin-left: 20px;
+            /* Adds indentation to bullet points */
+        }
+
+        .policy-section li {
+            margin-bottom: 5px;
+            /* Adds spacing between bullet points */
+        }
+
+        /* Additional CSS for search input to align with the style */
+        #searchInput {
+            font-family: 'Arial', sans-serif;
+            font-size: 16px;
+            padding: 10px;
+            margin-bottom: 20px;
+            width: 100%;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            border: 1px solid #ccc;
+        }
+        
+        .policy-section h1 {
+    font-size: 28px;  /* Sufficiently large but not overpowering */
+    color: #333333;  /* Dark gray for a strong, readable contrast */
+    text-align: center;  /* Keeps the title aligned with the content's layout */
+    font-weight: bold;  /* Bold to ensure it stands out as the main heading */
+    margin-top: 20px;
+    margin-bottom: 20px;  /* Balanced top and bottom margins */
+}
+
+    </style>
+</head>
+
+<body id="mainColorFill">
+
+
+
+    <!-- BELOW IS THE NAVBAR WITH LOGO -->
+    <nav class="navbar navbar-expand-lg navbar-light ">
+        <div class="container" id="removePadding" style="padding-right: 0px; background-color: var(--PrimaryColor)">
+
+
+
+            <div type="" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions"
+                aria-controls="offcanvasWithBothOptions" style=" background-color: var(--PrimaryColor);">
+
+                <img src="img/menu_icon.png" class="position-absolute top-50 start-0 translate-middle  " alt=""
+                    style=" max-height: 30px; margin-left: 45px;margin-top: 15px; ">
+
+                <span class=" rounded float-left"></span>
+            </div>
+
+            <!-- JUST EDITED JUST EDITED JUST EDITED JUST EDITED JUST EDITED JUST EDITED -->
+            <!-- <div class=" container row " id="removePadding" style="text-align: center;">
+                <img class="rounded mx-auto d-block" src="img/text_logo.png" alt="logo" style="max-width: 60%; height: auto;
+                    margin: auto;
+                    display: block;margin-bottom: 50px;margin: 0; padding-top: 30px;">
+
+            </div> -->
+
+            <div class=" container row " id="removePadding" style="text-align: center;  margin:0px">
+                <a href="employeeWelcome.html"><img class="rounded mx-auto d-block textLogoNavbarImage"
+                        src="img/text_logo.png" alt="logo"></a>
+
+            </div>
+
+        </div>
+    </nav>
+    </div>
+    <!-- ABOVE IS THE NAVBAR WITH LOGO -->
+
+
+
+
+
+
+
+
+
+
+
+    <!-- THIS IS THE MENU ONCE OPEN -->
+    <!-- THIS IS THE MENU ONCE OPEN -->
+    <!-- THIS IS THE MENU ONCE OPEN -->
+    <!-- THIS IS THE MENU ONCE OPEN -->
+    <!-- THIS IS THE MENU ONCE OPEN -->
+    <!-- THIS IS THE MENU ONCE OPEN -->
+
+
+    <div class="offcanvas offcanvas-start row" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
+        aria-labelledby="offcanvasWithBothOptionsLabel" style="background-color: var(--PrimaryColor);width:90%;">
+        <div class="offcanvas-header ">
+
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" style="padding: 20px;"
+                aria-label="Close"></button>
+        </div>
+        <div class=" container " id="removePadding" style="text-align: center; border-radius: 30px;">
+            <img class="mainLogo" src="img/main_logo.png" alt="logo">
+
+        </div>
+
+        <div class="offcanvas-body container row" style="padding-right: 0px;">
+
+            <a href="myAccount.html" id="removePadding">
+                <p class="sideBar">My Account</p>
+            </a>
+
+            <a href="trainingMainALL.html" id="removePadding">
+                <p class="sideBar">Training</p>
+            </a>
+
+            <a href="cookBookMain.html" id="removePadding">
+                <p class="sideBar">Cook Book</p>
+            </a>
+
+            <a href="policyGuide.html" id="removePadding">
+                <p class="sideBar">Policy Guide</p>
+            </a>
+
+            <a href="contactInfo.html" id="removePadding">
+                <p class="sideBar">Contact Info</p>
+            </a>
+        </div>
+
+    </div>
+
+    <!-- ABOVE IS THE MENU ONCE OPEN -->
+    <!-- ABOVE IS THE MENU ONCE OPEN -->
+    <!-- ABOVE IS THE MENU ONCE OPEN -->
+    <!-- ABOVE IS THE MENU ONCE OPEN -->
+    <!-- ABOVE IS THE MENU ONCE OPEN -->
+
+
+    <!-- WRITE CODE BELOW HERE -->
+
+    <div class="policy-section container">
+        <h1>Latham Bakery HR Policies</h1>
+        <input class="form-control mb-3" id="searchInput" type="text" placeholder="Search Policies..."
+            onkeyup="searchPolicies()">
+
+        <div id="policiesContainer">
+            <div class="policy-item">
+                <h2>1. Code of Conduct</h2>
+                <p>At Latham Bakery, we expect all employees to maintain the highest standards of conduct and
+                    professionalism. This includes treating colleagues and customers with respect, adhering to company
+                    policies, and maintaining a positive and productive work environment.</p>
+            </div>
+
+            <div class="policy-item">
+                <h2>2. Equal Opportunity Employment</h2>
+                <p>Latham Bakery is an equal opportunity employer. We do not discriminate against employees or job
+                    applicants based on race, color, religion, sex, national origin, age, disability, veteran status,
+                    marital status, sexual orientation, gender identity, or any other characteristic protected by law.
+                </p>
+            </div>
+
+            <div class="policy-item">
+                <h2>3. Workplace Safety</h2>
+                <p>The safety of our employees is a top priority. Employees must follow all safety protocols and report
+                    any hazards or injuries immediately to their supervisor. Regular safety training sessions will be
+                    conducted to ensure all staff are knowledgeable about workplace safety standards.</p>
+            </div>
+
+            <div class="policy-item">
+                <h2>4. Attendance and Punctuality</h2>
+                <p>Regular attendance and punctuality are essential to the smooth operation of Latham Bakery. Employees
+                    are expected to report to work on time and adhere to their scheduled shifts. In case of illness or
+                    emergency, employees must notify their supervisor as soon as possible.</p>
+            </div>
+
+            <div class="policy-item">
+                <h2>5. Dress Code</h2>
+                <p>All employees are required to maintain a clean and professional appearance while on duty. Uniforms,
+                    if provided, must be worn during work hours, and personal hygiene must be maintained. Any specific
+                    dress code requirements will be communicated by the management.</p>
+            </div>
+
+            <div class="policy-item">
+                <h2>6. Confidentiality</h2>
+                <p>Employees must maintain the confidentiality of all company information, including recipes, customer
+                    data, and proprietary processes. Sharing confidential information outside of Latham Bakery without
+                    authorization is strictly prohibited.</p>
+            </div>
+
+            <div class="policy-item">
+                <h2>7. Harassment and Discrimination</h2>
+                <p>Latham Bakery has a zero-tolerance policy for any form of harassment or discrimination. Employees are
+                    encouraged to report any incidents of harassment or discrimination to their supervisor or HR
+                    representative. All reports will be investigated promptly and thoroughly.</p>
+            </div>
+
+            <div class="policy-item">
+                <h2>8. Substance Abuse</h2>
+                <p>The use, possession, or distribution of illegal drugs or alcohol on company premises is strictly
+                    prohibited. Employees must not report to work under the influence of drugs or alcohol. Violation of
+                    this policy will result in disciplinary action, up to and including termination.</p>
+            </div>
+
+            <div class="policy-item">
+                <h2>9. Performance Reviews</h2>
+                <p>Regular performance reviews will be conducted to provide feedback, set goals, and discuss career
+                    development opportunities. Employees are encouraged to actively participate in these reviews and to
+                    seek feedback for continuous improvement.</p>
+            </div>
+
+            <div class="policy-item">
+                <h2>10. Leave Policies</h2>
+                <p>Employees are entitled to various types of leave, including vacation, sick leave, and personal leave.
+                    Requests for leave must be submitted in advance and approved by the supervisor. Detailed information
+                    about leave entitlements and procedures will be provided in the employee handbook.</p>
+            </div>
+
+            <div class="policy-item">
+                <h2>11. Benefits</h2>
+                <p>Latham Bakery offers a range of benefits to eligible employees, including health insurance,
+                    retirement plans, and employee discounts. Information about eligibility and enrollment procedures
+                    will be provided upon hiring and during open enrollment periods.</p>
+            </div>
+
+            <div class="policy-item">
+                <h2>12. Disciplinary Actions</h2>
+                <p>Failure to adhere to company policies and standards may result in disciplinary action, up to and
+                    including termination. Disciplinary actions will be documented, and employees will be given the
+                    opportunity to address any issues raised.</p>
+            </div>
+
+            <div class="policy-item">
+                <h2>13. Open Door Policy</h2>
+                <p>Latham Bakery encourages open communication between employees and management. Employees are welcome
+                    to discuss any concerns, suggestions, or feedback with their supervisor or HR representative at any
+                    time.</p>
+            </div>
+        </div>
+    </div>
+
+
+    <script>
+        function searchPolicies() {
+            var input, filter, container, items, text, i;
+            input = document.getElementById("searchInput");
+            filter = input.value.toUpperCase();
+            container = document.getElementById("policiesContainer");
+            items = container.getElementsByClassName("policy-item");
+
+            for (i = 0; i < items.length; i++) {
+                text = items[i].textContent || items[i].innerText;
+                if (text.toUpperCase().indexOf(filter) > -1) {
+                    items[i].style.display = "";
+                } else {
+                    items[i].style.display = "none";
+                }
+            }
+        }
+    </script>
+
+
+
+
+    <!-- WRITE CODE ABOVE HERE -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
