--- a/lessonQuiz.html
+++ b/lessonQuiz.html
@@ -257,7 +257,7 @@
     <div class="popup" id="resultPopup">
         <div class="popup-content">
             <h3 id="resultText"></h3>
-            <button class="confirm-button" onclick="goToHome()">Go to Home</button>
+            <button class="confirm-button" onclick="goToHome()">Go to lessons</button>
         </div>
     </div>
 
@@ -304,7 +304,7 @@
         }
 
         function goToHome() {
-            window.location.href = 'employeewelcome.html';
+            window.location.href = 'trainingMainALL.html';
         }
     </script>
 
