--- a/MENUTemplate.html
+++ b/MENUTemplate.html
@@ -14,12 +14,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+MX:wght@100..400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
 
 
 
     <!-- BOOTSTRAP INPORT -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- IMPORT LOCAL CSS FILE -->
@@ -40,16 +42,17 @@
             color: initial;
             text-decoration: inherit;
         }
-        .row{
+
+        .row {
             margin: auto
         }
+
         /* .mainLogo{
             max-width: 50%; height: auto;
             margin: auto;
             display: block;
         } */
         /* do not edit above */
-
     </style>
 </head>
 
@@ -57,7 +60,7 @@
 
 
 
-<!-- BELOW IS THE NAVBAR WITH LOGO -->
+    <!-- BELOW IS THE NAVBAR WITH LOGO -->
     <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container" id="removePadding" style="padding-right: 0px; background-color: var(--PrimaryColor)">
 
@@ -81,14 +84,15 @@
             </div> -->
 
             <div class=" container row " id="removePadding" style="text-align: center;  margin:0px">
-                <a href="employeeWelcome.html"><img class="rounded mx-auto d-block textLogoNavbarImage" src="img/text_logo.png" alt="logo" ></a>
+                <a href="employeeWelcome.html"><img class="rounded mx-auto d-block textLogoNavbarImage"
+                        src="img/text_logo.png" alt="logo"></a>
 
             </div>
 
         </div>
     </nav>
-    </div>
-<!-- ABOVE IS THE NAVBAR WITH LOGO -->
+
+    <!-- ABOVE IS THE NAVBAR WITH LOGO -->
 
 
 
@@ -99,26 +103,27 @@
 
 
 
-<!-- THIS IS THE MENU ONCE OPEN -->
-<!-- THIS IS THE MENU ONCE OPEN -->
-<!-- THIS IS THE MENU ONCE OPEN -->
-<!-- THIS IS THE MENU ONCE OPEN -->
-<!-- THIS IS THE MENU ONCE OPEN -->
-<!-- THIS IS THE MENU ONCE OPEN -->
+    <!-- THIS IS THE MENU ONCE OPEN -->
+    <!-- THIS IS THE MENU ONCE OPEN -->
+    <!-- THIS IS THE MENU ONCE OPEN -->
+    <!-- THIS IS THE MENU ONCE OPEN -->
+    <!-- THIS IS THE MENU ONCE OPEN -->
+    <!-- THIS IS THE MENU ONCE OPEN -->
 
 
     <div class="offcanvas offcanvas-start row" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
         aria-labelledby="offcanvasWithBothOptionsLabel" style="background-color: var(--PrimaryColor);width:90%;">
         <div class="offcanvas-header ">
 
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" style="padding: 20px;"   aria-label="Close"></button>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" style="padding: 20px;"
+                aria-label="Close"></button>
         </div>
         <div class=" container " id="removePadding" style="text-align: center; border-radius: 30px;">
-            <img class="mainLogo" src="img/main_logo.png" alt="logo" >
+            <img class="mainLogo" src="img/main_logo.png" alt="logo">
 
         </div>
 
-<div class="offcanvas-body container row" style="padding-right: 0px;">
+        <div class="offcanvas-body container row" style="padding-right: 0px;">
 
             <a href="myAccount.html" id="removePadding">
                 <p class="sideBar">My Account</p>
@@ -143,20 +148,20 @@
 
     </div>
 
-<!-- ABOVE IS THE MENU ONCE OPEN -->
-<!-- ABOVE IS THE MENU ONCE OPEN -->
-<!-- ABOVE IS THE MENU ONCE OPEN -->
-<!-- ABOVE IS THE MENU ONCE OPEN -->
-<!-- ABOVE IS THE MENU ONCE OPEN -->
+    <!-- ABOVE IS THE MENU ONCE OPEN -->
+    <!-- ABOVE IS THE MENU ONCE OPEN -->
+    <!-- ABOVE IS THE MENU ONCE OPEN -->
+    <!-- ABOVE IS THE MENU ONCE OPEN -->
+    <!-- ABOVE IS THE MENU ONCE OPEN -->
 
 
-<!-- WRITE CODE BELOW HERE -->
+    <!-- WRITE CODE BELOW HERE -->
 
 
 
 
 
-<!-- WRITE CODE ABOVE HERE -->
+    <!-- WRITE CODE ABOVE HERE -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
