very jagged rough esitmate complete of the employee side

--- a/policyGuide.html
+++ b/policyGuide.html
@@ -230,7 +230,7 @@
     <!-- WRITE CODE BELOW HERE -->
 
     <div class="policy-section container">
-        <h1>Latham Bakery HR Policies</h1>
+        <h1 style="font-size: 40px;font-weight: 700;padding-bottom: 30px;">Latham Bakery HR Policies</h1>
         <input class="form-control mb-3" id="searchInput" type="text" placeholder="Search Policies..."
             onkeyup="searchPolicies()">
 
