couple of small theme tweaks

--- a/contactInfo.html
+++ b/contactInfo.html
@@ -102,7 +102,11 @@
     color: #666; /* Gray for less visual prominence */
 }
 
-
+.col-md-6{
+/* CAN REMOIVE THIS  */
+    padding-right: 5px;
+    padding-left: 5px;
+}
 
 
 
