--- a/employeeWelcome.html
+++ b/employeeWelcome.html
@@ -485,10 +485,10 @@
                     </h3>
                     <div class="mt-5">
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50"
+                            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 65%" aria-valuenow="50"
                                 aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <div class="mt-3"> <span class="text1">6 completed <span class="text2">of 12
+                        <div class="mt-3"> <span class="text1">8 completed <span class="text2">of 12
                                     moduals</span></span> </div>
                     </div>
                 </div>
